<resources>
    <string name="app_name">DialLock</string>

    <string name="setting_title">설정</string>
    <string name="setting_small_title1">패스워드 설정</string>
    <string name="setting_small_title2">잠금화면 사용</string>
    <string name="setting_small_title3">PW 자리수</string>
    <string name="setting_small_title4">패스워드 입력</string>
    <string name="setting_small_title5">패스워드 확인</string>

    <string name="setting_small_option1">   Yes</string>
    <string name="setting_small_option2">   No</string>
    <string name="setting_small_option3">   2자리</string>
    <string name="setting_small_option4">   4자리</string>
    <string name="setting_enter">입력</string>

    <string name="setting_small_desc1">Dialog 매뉴얼</string>.
    <string name="setting_small_desc2">패스워드 일치여부를 확인해주세요</string>.

    <string name="setting_next">다음</string>
    <string name="setting_before">이전</string>
    <string name="title_activity_settings_test">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- Google AdMob-->
    <string name="admob_app_id">ca-app-pub-8681093336917234~2424612855</string>
    <string name="banner_ad_unit_id">ca-app-pub-8681093336917234/3431762131</string>
    <string name="banner_ad_unit_id_for_test">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitial_ad_unit_id_for_test">ca-app-pub-3940256099942544/1033173712</string>

    <string name="application_license_key">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAzydRMB+7SKivWzyn6anb11uq7+aCIfhtkVc4HwbQOK9GTAmzD22fSG/Eyy4dg+C4wHUIsQXPSgmPIPqFxwVqFAbdqSYfI+sR0TcN5Pnb2CfTePQLkbzar3p/CMiqyj4HjJn9ALHcYVlzMF19MSaH/naBpkmqYYczVFJdSmlW41Uy9qW4HGQxIZNq2vIsQ/CYSDLrIZxdJRCaWHlObbWrh/FZUkmBMsZgG33axEcC9a7JDkh8MpVL6xyBziOcwXQx26NY1faekC6ygFamolSzwWCMyHye+L2joF7u9T+ejq/51sCqCmpQiK9ady4imXwkZ1o5CwTZFDhHUC4fULgevQIDAQAB</string>
    <string name="sku">no_ads</string>

</resources>
