<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:id="@+id/textView2"
            android:background="#9E9E9E"
            android:gravity="center"
            android:padding="2dp"
            android:text="@string/setting_title"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:layout_marginBottom="4dp"
            android:background="#D5D5D5"
            android:gravity="center"

            android:text="@string/setting_small_title1"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">

            <TextView
                android:layout_width="123dp"
                android:layout_height="28dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:text="@string/setting_small_title2"
                android:textColor="#000000"
                android:textSize="14sp" />

            <CheckBox
                android:id="@+id/check_use"
                android:layout_width="80dp"
                android:layout_height="28dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="4dp"
                android:button="@drawable/my_checkbox"
                android:checked="true"
                android:text="@string/setting_small_option1"
                android:textColor="#000000"
                android:textSize="14sp" />

            <CheckBox
                android:id="@+id/check_dont"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="4dp"
                android:button="@drawable/my_checkbox"
                android:text="@string/setting_small_option2"
                android:textColor="#000000"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="123dp"
                android:layout_height="28dp"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:text="@string/setting_small_title3"
                android:textColor="#000000"
                android:textSize="14sp" />

            <CheckBox
                android:id="@+id/pwSize2"

                android:layout_width="80dp"
                android:layout_height="28dp"
                android:layout_marginLeft="50dp"
                android:button="@drawable/my_checkbox"
                android:checked="false"
                android:text="@string/setting_small_option3"
                android:textColor="#000000"
                android:textSize="14sp" />

            <CheckBox
                android:id="@+id/pwSize4"


                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_marginLeft="10dp"
                android:button="@drawable/my_checkbox"
                android:checked="true"
                android:text="@string/setting_small_option4"
                android:textColor="#000000"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">

            <TextView
                android:layout_width="123dp"
                android:layout_height="28dp"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:text="@string/setting_small_title4"
                android:textColor="#000000"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_inputPw"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_marginLeft="40dp"
                android:text="@string/setting_enter"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/input_pw"
                android:layout_width="100dp"
                android:layout_height="28dp"
                android:layout_marginLeft="5dp"

                android:text=""
                android:textAlignment="center"
                android:textSize="15sp" />
        </LinearLayout>

        <TextView
            android:layout_width="144dp"
            android:layout_height="39dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:background="#d1d1d1"
            android:gravity="center"
            android:text="@string/setting_small_desc1"
            android:textColor="#ffffff"
            android:textSize="16sp" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/desc1"
                    android:layout_width="290dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="15dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/desc1_re" />

                <ImageView
                    android:id="@+id/desc2"
                    android:layout_width="290dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginRight="3dp"
                    android:background="@drawable/desc2_re" />

                <ImageView
                    android:id="@+id/desc3"
                    android:layout_width="290dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center_horizontal"

                    android:background="@drawable/desc3_re" />
            </LinearLayout>
        </HorizontalScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="123dp"
                android:layout_height="28dp"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:text="@string/setting_small_title5"
                android:textColor="#000000"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_checkPw"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_marginLeft="30dp"
                android:text="@string/setting_enter"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/re_pw"
                android:layout_width="100dp"
                android:layout_height="28dp"
                android:layout_marginLeft="5dp"
                android:inputType="numberPassword"
                android:text=""
                android:textSize="15sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/error"
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:gravity="center_horizontal"
            android:text="@string/setting_small_desc2"
            android:textColor="@color/colorAccent"
            android:textSize="15sp"
            android:visibility="invisible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="7dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">


                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="65dp"
                    android:layout_height="20dp"

                    android:background="@drawable/page1_re" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/confirm"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"

                    android:text="@string/setting_next"
                    android:textSize="15sp" />

            </LinearLayout>

        </LinearLayout>
</LinearLayout>